--- a/AutoCmdb/templates/asset/input.html
+++ b/AutoCmdb/templates/asset/input.html
@@ -22,8 +22,17 @@
     <script src="/static/js/bootstrap-fileinput_zh-TW.js"></script>
 
 
-    <style>
+     <style>
 
+        .modal-dialog {
+
+            width: 600px;
+            left: 50%;
+            top: 50%;
+            margin-top: -134.5px;
+            margin-left: -250px;
+
+        }
     </style>
 
 
