--- a/AutoCmdb/templates/department/input.html
+++ b/AutoCmdb/templates/department/input.html
@@ -97,7 +97,7 @@
 
         $("#input-b2").fileinput({
             language: "zh-TW",
-            allowedFileExtensions: ["csv"],
+            allowedFileExtensions: ["xlsx"],
             mainClass: "input-group-lg", //文件输入框为大型号
             uploadUrl: "{% url 'department_input' %}", //上传图片的服务器地址
             uploadExtraData: {
