--- a/AutoCmdb/templates/category/input.html
+++ b/AutoCmdb/templates/category/input.html
@@ -24,6 +24,15 @@
 
     <style>
 
+        .modal-dialog {
+
+            width: 600px;
+            left: 50%;
+            top: 50%;
+            margin-top: -134.5px;
+            margin-left: -250px;
+
+        }
     </style>
 
 
@@ -61,7 +70,7 @@
                 <!-- Modal Header -->
                 <div class="modal-header">
                     <h4 class="modal-title"></h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+
                 </div>
 
                 <!-- Modal body -->
@@ -108,6 +117,7 @@
         $("#input-b2").on('fileuploaded', function (event, data, previewId, index) {
             console.log("asset_input fileuploaded");
 
+            $('#Modal').modal({backdrop: 'static', keyboard: false});
             if (data.response.status == 'ok') {
                 console.log("response ok");
 
