--- a/AutoCmdb/templates/department/input.html
+++ b/AutoCmdb/templates/department/input.html
@@ -24,6 +24,15 @@
 
     <style>
 
+        .modal-dialog {
+
+            width: 600px;
+            left: 50%;
+            top: 50%;
+            margin-top: -134.5px;
+            margin-left: -250px;
+
+        }
     </style>
 
 
@@ -61,7 +70,6 @@
                 <!-- Modal Header -->
                 <div class="modal-header">
                     <h4 class="modal-title"></h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
                 <!-- Modal body -->
@@ -111,6 +119,7 @@
         $("#input-b2").on('fileuploaded', function (event, data, previewId, index) {
             console.log("asset_input fileuploaded");
 
+            $('#Modal').modal({backdrop: 'static', keyboard: false});
             if (data.response.status == 'ok') {
                 console.log("response ok");
 
@@ -121,8 +130,8 @@
                 console.log("response error");
                 $("#Modal").modal("show");
                 $(".modal-title").text("匯入失敗");
-                $(".modal-title").css({'color':'red'});
-                $(".modal-body").html("你可以再次上傳或返回列表<br><i class='fa fa-exclamation-triangle'></i>錯誤訊息 : <b>"+ data.response.msg + "</b>");
+                $(".modal-title").css({'color': 'red'});
+                $(".modal-body").html("你可以再次上傳或返回列表<br><i class='fa fa-exclamation-triangle'></i>錯誤訊息 : <b>" + data.response.msg + "</b>");
             }
         });
 
