--- a/AutoCmdb/templates/host/host_info.html
+++ b/AutoCmdb/templates/host/host_info.html
@@ -17,7 +17,7 @@
 
     <ol class="breadcrumb">
         <li><a href="{% url 'host' %}">主機列表 </a></li>
-        <li class="active">{{ host_obj.asset }}</li>
+        <li class="active">{{ host_obj.name }}</li>
 
     </ol>
 
