--- a/AutoCmdb/templates/host/base.html
+++ b/AutoCmdb/templates/host/base.html
@@ -28,9 +28,10 @@
 
     <ul class="nav nav-sidebar">
         <li {% if request.path == location %}class="active"{% endif %}><a href={{ location }}>位置</a></li>
+        <!---
         <li><a href='#'>IP電話管理</a></li>
         <li><a href='#'>交換器管理</a></li>
-        <li><a href='#'>CCTV管理</a></li>
+        <li><a href='#'>CCTV管理</a></li>-->
     </ul>
 
 
