--- a/AutoCmdb/templates/asset/input.html
+++ b/AutoCmdb/templates/asset/input.html
@@ -60,7 +60,7 @@
 
     <div class="panel panel-default" style="padding: 20px">
 
-        你可以在這裡下載`範例檔案`, 或是直接上傳檔案進行匯入。
+        你可以在這裡下載<a href="/demo/資產/DEMO_資產.xlsx">範例檔案</a>, 或是直接上傳檔案進行匯入。
 
         <input id="input-b2" name="file" type="file" class="file" data-show-preview="false">
 
